fix(frontend): Fix scrollbars on map.
Simple one-line fix. Perhaps too simple, but it solves the problem and also any future problems that might cause scrollbars.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans';
-  /* width: 100vw; */
+  overflow: hidden;
 }
 
 :root {
